<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/registration_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_tv"
        android:textSize="30sp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/registration_et_username"
        android:autofillHints="username"
        android:inputType="text"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/registration_et_password"
        android:autofillHints="password"
        android:inputType="textPassword"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/registration_et_confirm_password"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/registration_btn_to_login"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/registration_btn_register"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>