<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/login_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv"
        android:textSize="30sp"/>
    <EditText
        android:id="@+id/login_et_username"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:hint="@string/login_et_username"
        android:autofillHints="username"
        />
    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:hint="@string/login_et_password"
        android:autofillHints="password"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/login_btn_to_registration"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/login_btn_to_registration"
            android:layout_height="match_parent"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/login_btn_login"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
</LinearLayout>